# bfexcercise-selenium-python

./: .behaverc  .gherkin-lintrc.json  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  categories-trend.json  duration-trend.json  history-trend.json  history.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  retry-trend.json  sonar-project.properties
.github/workflows/: python3.yml
82/: index.html
82/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
82/export/: influxDbData.txt  prometheusData.txt
82/widgets/: duration-trend.json  duration.json  executors.json  severity.json  summary.json
83/: index.html
83/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
83/export/: influxDbData.txt  prometheusData.txt
83/history/: history.json
83/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
84/: index.html
84/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
84/export/: influxDbData.txt  prometheusData.txt
84/history/: history.json
84/widgets/: behaviors.json  duration.json  executors.json  severity.json  summary.json
88/: index.html
88/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
88/export/: influxDbData.txt  prometheusData.txt
89/: index.html
90/: index.html
91/: index.html
92/: index.html
Config/: Config.py
Pages/: BasePage.py  HomePage.py
Resources/: Locators.py
config/: config.py
docs/: CONTRIBUTE-python.md  INSTALLATION.md
features/: basic_ui_exercises.feature  enviroment.py  environment.py
last-history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
pages/: base_page.py  home_page.py
scripts/: helper.py  install.sh  pre-push.sh
(+273 files in other folders)
