[tool.poetry]
name = "bfexcercise-selenium-python"
version = "0.1.0"
description = ""
authors = ["Juan Camilo Gomez"]
readme = "README.md"
packages = [
    { include = "main", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
behave = "^1.2.6"
selenium = "^4.23.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.6"
pylint-behave = "^1.0.3"
pysonar-scanner = "^0.1.0.340"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
